Fix CSS formatting for main content alignment in Reviews section

--- a/public/css/Common/Reviews.css
+++ b/public/css/Common/Reviews.css
@@ -1,4 +1,4 @@
-/.content main {
+.content main {
     justify-content: center;
     align-items: center;
     width: 100%;
